--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   video_player: ^2.1.10
   http: ^0.13.3
   crypto: ^3.0.0
-  nfc_manager: ^3.4.0
+  shared_preferences: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
