--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,7 @@ analyzer:
     library_private_types_in_public_api: ignore
     use_build_context_synchronously: ignore
     use_key_in_widget_constructors: ignore
+    use_super_parameters: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
