--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     library_private_types_in_public_api: ignore
+    unused_element: ignore
     use_build_context_synchronously: ignore
     use_key_in_widget_constructors: ignore
     use_super_parameters: ignore
