--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,7 +9,10 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    avoid_function_literals_in_foreach_calls: ignore
     library_private_types_in_public_api: ignore
+    prefer_interpolation_to_compose_strings: ignore
+    sort_child_properties_last: ignore
     unused_element: ignore
     use_build_context_synchronously: ignore
     use_key_in_widget_constructors: ignore
