--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   video_player: ^2.1.10
-  http: ^0.13.3
+  http: ^1.2.1
   crypto: ^3.0.0
   shared_preferences: ^2.2.3
+  dio: ^5.4.3+1
+  intl: 0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
